...
                          ),
                          Column(
                            children: [
                              Container(
                                width: _width * 0.9,
                                child: RaisedButton(
                                  key: Key("wrapperLoginButton"),
                                  onPressed: () {
                                    Get.to(() => Login());
                                  },
                                  color: colors.greyColor,
                                  child: Text("Login"),
                                ),
                              ),
                              Container(
                                width: _width * 0.9,
                                child: RaisedButton(
                                  key: Key("wrapperRegisterButton"),
                                  onPressed: () {
                                    Get.to(() => Signup());
                                  },
                                  color: Colors.pink,
                                  child: _widgets.text(
                                      color: colors.greyColor,
...
