...
      width: _width,
      controller: controller,
      fieldIcon: Icons.text_fields_outlined,
      hintText: "Add category",
      buttonText: "Add",
      textInputType: TextInputType.visiblePassword,
      fieldKey: Key("addCategoryField"),
      actionButtonKey: Key("addCategoryButton"),
      callback: () async {
        var connectivityResult = await (Connectivity().checkConnectivity());
        String category = controller.text.toString();
        if (categories.contains(category)) {
          String updatedCategory = findUpdatedCategory(
                  categoriesRef: categories, categoryRef: category)
...
